--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
     "@testing-library/user-event": "^13.2.1",
     "async": ">=2.6.4",
     "ejs": ">=3.1.7",
-    "protobufjs": ">=6.11.3",
     "firebase": "^9.6.4",
+    "protobufjs": ">=6.11.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.1",
@@ -49,8 +49,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "nth-check": ">=2.0.1",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.16",
-	  "react-scripts": "^5.0.1"
+    "react-scripts": "^2.1.3",
+    "tailwindcss": "^3.0.16"
   }
 }
